# bythebook

./: .gitignore  CMakeLists.txt  LICENSE  README.md  edges.cpp  edges.h  main.cpp  segment.cpp  segment.h  text.cpp  text.h
server/: Makefile  app.py
server/static/: index.css  index.html  index.js
